# trackform

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  ping.yml
deploy/: .env.example  BOOTSTRAP.md  Caddyfile
scripts/: init_test_db.py
src/dj_loop_service/: __init__.py  auth.py  cli.py  config.py  db.py  events.py  jobs.py  pipeline.py  plugin.py  schema.py  server.py
src/dj_loop_service/plugins/: __init__.py  core_beats.py  core_key.py  core_load.py  core_loop_features_basic.py  core_loop_mining.py  core_sections.py
tests/: test_plugin_registry.py
worker/: Dockerfile  main.py  plugin.py  pyproject.toml  run_madmom_subprocess.py
worker/plugins/: __init__.py  embed_muq_mulan.py  key_essentia.py  loop_mining.py  loop_propose.py  loop_tag.py  structure_beat_this.py  structure_madmom.py
